--- a/packages.bib
+++ b/packages.bib
@@ -3,49 +3,24 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2022},
+  year = {2024},
   url = {https://www.R-project.org/},
-}
-
-@Manual{R-bookdown,
-  title = {bookdown: Authoring Books and Technical Documents with R Markdown},
-  author = {Yihui Xie},
-  year = {2022},
-  note = {R package version 0.28},
-  url = {https://CRAN.R-project.org/package=bookdown},
 }
 
 @Manual{R-eRm,
   title = {eRm: Extended Rasch Modeling},
-  author = {Patrick Mair and Reinhold Hatzinger and Marco J. Maier},
-  year = {2021},
-  note = {R package version 1.0-2},
+  author = {Patrick Mair and Thomas Rusch and Reinhold Hatzinger and Marco J. Maier},
+  year = {2024},
+  note = {R package version 1.0-6},
   url = {https://CRAN.R-project.org/package=eRm},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2022},
-  note = {R package version 1.39},
+  year = {2024},
+  note = {R package version 1.48},
   url = {https://yihui.org/knitr/},
-}
-
-@Manual{R-lavaan,
-  title = {lavaan: Latent Variable Analysis},
-  author = {Yves Rosseel and Terrence D. Jorgensen and Nicholas Rockwood},
-  year = {2022},
-  note = {R package version 0.6-12},
-  url = {https://lavaan.ugent.be},
-}
-
-@Manual{R-lordif,
-  title = {lordif: Logistic Ordinal Regression Differential Item Functioning using
-IRT},
-  author = {Seung W. Choi and with contributions from Laura E. Gibbons and Paul K. Crane},
-  year = {2016},
-  note = {R package version 0.3-3},
-  url = {https://CRAN.R-project.org/package=lordif},
 }
 
 @Manual{R-ltm,
@@ -56,126 +31,103 @@ IRT},
   url = {https://github.com/drizopoulos/ltm},
 }
 
-@Manual{R-mirt,
-  title = {mirt: Multidimensional Item Response Theory},
-  author = {Phil Chalmers},
-  year = {2022},
-  note = {R package version 1.37.1},
-  url = {https://CRAN.R-project.org/package=mirt},
-}
-
 @Manual{R-psych,
   title = {psych: Procedures for Psychological, Psychometric, and Personality
 Research},
   author = {William Revelle},
-  year = {2022},
-  note = {R package version 2.2.5},
-  url = {https://personality-project.org/r/psych/
-https://personality-project.org/r/psych-manual.pdf},
+  year = {2024},
+  note = {R package version 2.4.6.26},
+  url = {https://personality-project.org/r/psych/},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2022},
-  note = {R package version 2.14},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2024},
+  note = {R package version 2.27},
+  url = {https://github.com/rstudio/rmarkdown},
 }
 
 @Manual{R-sirt,
   title = {sirt: Supplementary Item Response Theory Models},
   author = {Alexander Robitzsch},
-  year = {2022},
-  note = {R package version 3.12-66},
-  url = {https://CRAN.R-project.org/package=sirt},
+  year = {2024},
+  note = {R package version 4.1-15},
+  url = {https://github.com/alexanderrobitzsch/sirt},
 }
 
 @Manual{R-TAM,
   title = {TAM: Test Analysis Modules},
   author = {Alexander Robitzsch and Thomas Kiefer and Margaret Wu},
-  year = {2022},
-  note = {R package version 4.0-16},
-  url = {https://CRAN.R-project.org/package=TAM},
-}
-
-@Book{bookdown2016,
-  title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2016},
-  note = {ISBN 978-1138700109},
-  url = {https://bookdown.org/yihui/bookdown},
-}
-
-@Manual{eRm2021a,
-  title = {{eRm: Extended Rasch Modeling}},
-  author = {Patrick Mair and Reinhold Hatzinger and Marco Johannes Maier},
-  year = {2021},
-  note = {1.0-2},
-  url = {https://cran.r-project.org/package=eRm},
+  year = {2024},
+  note = {R package version 4.2-21},
+  url = {http://www.edmeasurementsurveys.com/TAM/Tutorials/},
 }
 
 @Article{eRm2007a,
-  title = {{Extended Rasch modeling: The eRm package for the application of IRT models in R}},
+  title = {Extended Rasch modeling: The eRm package for the application of IRT models in R},
   author = {Patrick Mair and Reinhold Hatzinger},
+  journal = {Journal of Statistical Software},
   year = {2007},
   page = {1--20},
-  journal = {{Journal of Statistical Software}},
   volume = {20},
   issue = {9},
-  url = {https://www.jstatsoft.org/v20/i09},
+  doi = {10.18637/jss.v020.i09},
 }
 
 @Article{eRm2007b,
-  title = {{CML based estimation of extended Rasch models with the eRm package in R}},
+  title = {CML based estimation of extended Rasch models with the eRm package in R},
   author = {Patrick Mair and Reinhold Hatzinger},
+  journal = {Psychology Science},
   year = {2007},
   page = {26--43},
-  journal = {{Psychology Science}},
   volume = {49},
   issue = {1},
+  doi = {10.18637/jss.v020.i09},
 }
 
 @Article{eRm2009a,
-  title = {{IRT models with relaxed assumptions in eRm: A manual-like instruction}},
+  title = {IRT models with relaxed assumptions in eRm: A manual-like instruction},
   author = {Reinhold Hatzinger and Thomas Rusch},
+  journal = {Psychology Science Quarterly},
   year = {2009},
   page = {87--120},
-  journal = {{Psychology Science Quarterly}},
   volume = {51},
   issue = {1},
 }
 
 @InProceedings{eRm2013a,
-  title = {{Linear logistic models with relaxed assumptions in R}},
-  author = {Thomas Rusch and Marco Johannes Maier and Reinhold Hatzinger},
-  booktitle = {{Algorithms from and for Nature and Life}},
+  title = {Linear logistic models with relaxed assumptions in R},
+  author = {Thomas Rusch and Marco Maier and Reinhold Hatzinger},
+  booktitle = {Algorithms from and for Nature and Life},
   editor = {Berthold Lausen and Dirk {van den Poel} and Alfred Ultsch},
-  series = {{Studies in Classification, Data Analysis, and Knowledge Organization}},
+  series = {Studies in Classification, Data Analysis, and Knowledge Organization},
   year = {2013},
   page = {337--347},
-  address = {{New York}},
-  publisher = {{Springer}},
+  address = {New York},
+  publisher = {Springer},
   doi = {10.1007/978-3-319-00035-0_34},
 }
 
 @Article{eRm2015a,
-  title = {{An Empirical Power Analysis of Quasi-Exact Tests for the Rasch Model: Measurement Invariance in Small Samples}},
-  author = {Ingrid Koller and Marco Johannes Maier and Reinhold Hatzinger},
+  title = {An empirical power analysis of quasi-exact tests for the Rasch model: Measurement invariance in small samples},
+  author = {Ingrid Koller and Marco Maier and Reinhold Hatzinger},
+  journal = {Methodology},
   year = {2015},
+  page = {45--54},
   volume = {11},
   issue = {2},
-  page = {45--54},
-  journal = {{Methodology}},
   doi = {10.1027/1614-2241/a000090},
 }
 
 @Article{eRm2019a,
-  title = {{Testing the Local Independence Assumption of the Rasch Model With Q3-Based Nonparametric Model Tests}},
+  title = {Testing the local independence assumption of the Rasch model with Q3-based nonparametric model tests},
   author = {Rudolf Debelak and Ingrid Koller},
+  journal = {Applied Psychological Measurement},
   year = {2019},
-  journal = {{Applied Psychological Measurement}},
+  page = {103--117},
+  volume = {44},
+  issue = {2},
   doi = {10.1177/0146621619835501},
 }
 
@@ -198,18 +150,6 @@ https://personality-project.org/r/psych-manual.pdf},
   publisher = {Chapman and Hall/CRC},
   year = {2014},
   note = {ISBN 978-1466561595},
-  url = {http://www.crcpress.com/product/isbn/9781466561595},
-}
-
-@Article{lavaan2012,
-  title = {{lavaan}: An {R} Package for Structural Equation Modeling},
-  author = {Yves Rosseel},
-  journal = {Journal of Statistical Software},
-  year = {2012},
-  volume = {48},
-  number = {2},
-  pages = {1--36},
-  doi = {10.18637/jss.v048.i02},
 }
 
 @Article{ltm2006,
@@ -223,24 +163,13 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://doi.org/10.18637/jss.v017.i05},
 }
 
-@Article{mirt2012,
-  title = {{mirt}: A Multidimensional Item Response Theory Package for the {R} Environment},
-  author = {R. Philip Chalmers},
-  journal = {Journal of Statistical Software},
-  year = {2012},
-  volume = {48},
-  number = {6},
-  pages = {1--29},
-  doi = {10.18637/jss.v048.i06},
-}
-
 @Book{rmarkdown2018,
   title = {R Markdown: The Definitive Guide},
   author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
-  note = {ISBN 9781138359338},
+  isbn = {9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
 
@@ -250,7 +179,7 @@ https://personality-project.org/r/psych-manual.pdf},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2020},
-  note = {ISBN 9780367563837},
+  isbn = {9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
