Revisions to results page

--- a/packages.bib
+++ b/packages.bib
@@ -31,6 +31,14 @@
   url = {https://github.com/drizopoulos/ltm},
 }
 
+@Manual{R-mirt,
+  title = {mirt: Multidimensional Item Response Theory},
+  author = {Phil Chalmers},
+  year = {2024},
+  note = {R package version 1.42},
+  url = {https://github.com/philchalmers/mirt},
+}
+
 @Manual{R-psych,
   title = {psych: Procedures for Psychological, Psychometric, and Personality
 Research},
@@ -161,6 +169,17 @@ Research},
   number = {5},
   pages = {1--25},
   url = {https://doi.org/10.18637/jss.v017.i05},
+}
+
+@Article{mirt2012,
+  title = {{mirt}: A Multidimensional Item Response Theory Package for the {R} Environment},
+  author = {R. Philip Chalmers},
+  journal = {Journal of Statistical Software},
+  year = {2012},
+  volume = {48},
+  number = {6},
+  pages = {1--29},
+  doi = {10.18637/jss.v048.i06},
 }
 
 @Book{rmarkdown2018,
