--- a/results.qmd
+++ b/results.qmd
@@ -23,9 +23,9 @@ kbl(dems.tbl, format.args = list(big.mark = ",")) %>%
   pack_rows("Race",16,24) %>%
   pack_rows("Sexual Orientation",25,32)
 
-#dems.tbl %>%
-#  kableExtra::kbl(align = "cccccccccc", digits = 2, booktabs = TRUE) %>%
-#  kable_styling(latex_options = c("scale_down","hold_position"))
+dems.tbl %>%
+  kableExtra::kbl(align = "cccccccccc", digits = 2, booktabs = TRUE) %>%
+  kable_styling(latex_options = c("scale_down","hold_position"))
 ```
 
 The survey also included several items asking participants about their religious background and current identification and beliefs. We report the results of these religious characteristics in @tbl-ChristTable. Most of the sample (87%) was raised in a Christian home. Over half (56%) now self-identify as Protestant, followed by a quarter who do not identify with a religious tradition (16% "Nothing in particular" and 10% "Agnostic"). Over 60% view the Bible as divinely inspired if not to be interpreted literally.
@@ -44,9 +44,9 @@ kbl(christ.tbl, format.args = list(big.mark = ",")) %>%
   pack_rows("Current Religious Identification",5,14) %>%
   pack_rows("Current View of the Bible",15,19) 
 
-#dems.tbl %>%
-#  kableExtra::kbl(align = "cccccccccc", digits = 2, booktabs = TRUE) %>%
-#  kable_styling(latex_options = c("scale_down","hold_position"))
+dems.tbl %>%
+  kableExtra::kbl(align = "cccccccccc", digits = 2, booktabs = TRUE) %>%
+  kable_styling(latex_options = c("scale_down","hold_position"))
 ```
 
 @fig-theology depicts the results of the item asking participants their current theological identification. According this plot, most of the sample are moderate in their theological views. Very few report being "Very Liberal" or "Very Conservative".
@@ -60,6 +60,7 @@ kbl(christ.tbl, format.args = list(big.mark = ",")) %>%
 #| verbose: false
 #| message: false
 #| warning: false
+
 source("code/Theology-Item.R")
 # 3. Barplot
 par(mar=c(5,10,5,5))
@@ -120,6 +121,7 @@ We first analyzed the principal components in the 59 SHAS items. As shown in @fi
 #| verbose: false
 #| message: false
 #| warning: false
+
 source("code/IRT-Principal-Components.R")
 plot(pca,type="lines", main="") # scree plot
 ```
@@ -134,6 +136,7 @@ Second, we estimated a unidimensional Rasch model on dichotomized responses to t
 #| verbose: false
 #| message: false
 #| warning: false
+
 source("code/IRT-Proportion-of-Variance.R")
 ```
 
@@ -146,6 +149,7 @@ Next, we examined the principal components of the correlations among residuals o
 #| fig-cap: "Contrasts from PCA of Standardized Residual Correlations"
 #| echo: false
 #| verbose: false
+
 source("code/IRT-PCAR.R")
 plot(contrasts, ylab = "Eigenvalues for Contrasts", xlab = "Contrast Number")
 ```
@@ -160,6 +164,7 @@ Finally, we calculated the Q3 statistic @Yen1984 to examine correlations among i
 #| message: false
 #| warning: false
 #| echo: false
+
 source("code/IRT-Q3.R")
 I <- ncol(q3.data)
 image( 1:I, 1:I, mod.q3$q3.matrix, col=grey( 1 - (0:32)/32), xlab = "Item", ylab = "Item")
@@ -173,33 +178,43 @@ We used the Rasch Rating Scale Model (RSM) [@Andrich1978] to examine the SHAS it
 
 We also use different language from conventional IRT analyses. Because IRT was developed to measure student achievement, IRT statistics for both items and persons tend to use language of "ability" and "difficulty." For our purpose to measure a psychological trait such as the experience of spiritual abuse, we chose instead to adopt language of "severity." We used person parameters and scale scores to represent participants' severity of abuse and to describe item parameters as severity parameters.
 
-library(tidyverse) library(dplyr) library(tidyr) library(knitr) library(kableExtra) library(stats4) library(lattice) library(mirt) library(WrightMap)
+```{r}
+
+library(tidyverse)
+library(dplyr)
+library(tidyr)
+library(knitr)
+library(kableExtra)
+library(stats4)
+library(lattice)
+library(mirt)
+library(WrightMap)
+```
 
 The RSM estimates the probability of a person choosing among several response options (i.e. Never, Once or twice) given two values: the severity of abuse represented by the item, and the person's severity of the latent trait (spiritual abuse). The increase in severity involved in choosing between two response categories is called a "step parameter". The RSM makes two assumptions of the response categories. One is that all items use the same rating scale. The other is that the same response categories distinguish persons equally well for each item. For these reasons the RSM estimates the same step parameters for all the items.
 
 To convey this information visually, @fig-RM-plot1 and @fig-RM-plot2 are plots of the category response functions of two items. In both, the horizontal axis is the scale of spiritual abuse expressed in logits ranging from -2 to +2. The vertical axis is the probability of selecting a given response (i.e., "Always") given the person's overall severity of spiritual abuse. The blue line is the probability of selecting Category 1 ("Never") for persons with less severe spiritual abuse. Persons with less severe spiritual abuse are most likely to select "Never" while those with more severe abuse are most likely to select "Always." Between these two extremes are persons with more moderate or average spiritual abuse. These persons are more likely to Categories 3 or 4, "Sometimes" or "Often", respectively. Both plots show curves that display identical step parameters.
 
-``{r}
-#| label: fig-RM-plot1
-#| fig-cap: "Category Response Plots"
-#| echo: false
-#| message: false
-#| warning: false
+<!-- {r}  -->
+<!-- #| label: fig-RM-plot1  -->
+<!-- #| fig-cap: "Category Response Plots"  -->
+<!-- #| echo: false  -->
+<!-- #| message: false  -->
+<!-- #| warning: false -->
 
-source("code/IRT-Estimate-RSM.R")
-plot(mod_rsm2, type = "items", items = 9, export = F, verbose = FALSE, message = FALSE, progress = FALSE)
-```
+<!-- source("code/IRT-Estimate-RSM.R") plot(mod_rsm2, type = "items", items = 9, export = F, verbose = FALSE, message = FALSE, progress = FALSE) -->
 
-``{r}
-#| label: fig-RM-plot2
-#| fig-cap: "Category Response Plots"
-#| echo: false
-#| message: false
-#| warning: false
 
-source("code/IRT-Estimate-RSM.R")
-plot(mod_rsm2, type = "items", items = 30, export = F, verbose = FALSE, message = FALSE, progress = FALSE)
-```
+<!-- {r} -->
+<!-- #| label: fig-RM-plot2 -->
+<!-- #| fig-cap: "Category Response Plots" -->
+<!-- #| echo: false -->
+<!-- #| message: false -->
+<!-- #| warning: false -->
+
+<!-- source("code/IRT-Estimate-RSM.R") -->
+<!-- plot(mod_rsm2, type = "items", items = 30, export = F, verbose = FALSE, message = FALSE, progress = FALSE) -->
+
 
 These plots point out a step reversal between "Never" and "Once or twice". Persons reporting the least severe spiritual abuse were most likely to report "Never" to this prompt of medical care being postponed or withheld for religious reasons. Persons farther along the scale who have experienced "average" average spiritual abuse should be more likely to report "Once or twice" but were still more likely to report "Never". This finding suggests the "Never" and "Once or twice" categories might be collapsed.
 
@@ -209,61 +224,32 @@ These plots point out a step reversal between "Never" and "Once or twice". Perso
 
 Two fit statistics commonly used in IRT models are the infit mean square and the outfit mean square [@BondFox2015]. The infit statistic places greater emphasis on unexpected responses that are close to the persons and item location. The outfit is sensitive to unexpected responses that are far from the location. The expected value of infit or outfit for each item is 1.0, with a range of acceptable values ranging from 0.5 to 1.5. Values outside these boundaries indicate a lack of fit between items and the model. All but one of the 60 items had infit and outfit statistics within the acceptable range.
 
-``{r}
-#| label: tbl-RSM-item-tbl
-#| tbl-cap: "Estimated Item Parameters for the Rating Scale Model and Item Chi-Square Fit Statistics"
-#| echo: false
-#| message: false
-#| warning: false
+<!-- {r}  -->
+<!-- #| label: tbl-RSM-item-tbl -->
+<!-- #| tbl-cap: "Estimated Item Parameters for the Rating Scale Model and Item Chi-Square Fit Statistics" -->
+<!-- #| echo: false  -->
+<!-- #| message: false  -->
+<!-- #| warning: false -->
 
-source("code/IRT-Build-RSM-Item-Table.R")
-suppressPackageStartupMessages(library(kableExtra))
-items.tbl.rsm %>%
-  kbl(align = "cccc", longtable = T, booktabs = T, digits = 2) %>%
-  kable_styling(latex_options = "repeat_header") %>%
-  add_header_above(c(" " = 2, "Item Parameters" = 2, "Fit Statistics" = 2))  %>%
-  column_spec(1, width="11cm")
-``
+<!-- source("code/IRT-Build-RSM-Item-Table.R") suppressPackageStartupMessages(library(kableExtra)) items.tbl.rsm %\>% kbl(align = "cccc", longtable = T, booktabs = T, digits = 2) %\>% kable_styling(latex_options = "repeat_header") %\>% add_header_above(c(" " = 2, "Item Parameters" = 2, "Fit Statistics" = 2)) %\>% column_spec(1, width="11cm") -->
 
-``{r}
-#| label: fig-RSM-item-histogram
-#| fig-cap: "Distribution of Item Severity Parameters"
-#| echo: false
-#| warning: false
-#| message: false
 
-source("code/IRT-Build-RSM-Item-Table.R")
-# all
-all <- items.tbl.rsm$xsi
-screen <- subset(items.tbl.rsm$xsi, items.tbl.rsm$screening == '*')
-control <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'controlling leadership')
-maintain <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'maintain system')
-distress <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'internal distress')
-violence <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'spiritual violence')
-god <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'harmful God-image')
-x <- list("Controlling leadership"=control,
-          "Maintain system"=maintain,
-          "Internal distress"=distress,
-          "Spiritual violence"=violence,
-          "Harmful God-image"=god,
-          "Screening items"=screen,
-          "All items"=all)
+<!-- {r} -->
+<!-- #| label: fig-RSM-item-histogram -->
+<!-- #| fig-cap: "Distribution of Item Severity Parameters" -->
+<!-- #| echo: false  -->
+<!-- #| warning: false  -->
+<!-- #| message: false -->
 
-stripchart(x,
-main="",
-xlab="Severity of Spiritual Abuse",
-# ylab="Item set",
-method="jitter",
-jitter = 0.25,
-col=c("navy","pink","blue","green","orange","red","grey"),
-pch=18,
-xlim = c(-.5,2),
-cex.lab = .7,
-cex.axis = .7,
-las = 2
-)
-# abline(v=0)
-``
+<!-- source("code/IRT-Build-RSM-Item-Table.R") \# all all \<- items.tbl.rsm$xsi -->
+<!-- screen <- subset(items.tbl.rsm$xsi, items.tbl.rsm$screening == '*') -->
+<!-- control <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'controlling leadership') -->
+<!-- maintain <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'maintain system') -->
+<!-- distress <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'internal distress') -->
+<!-- violence <- subset(items.tbl.rsm$xsi, items.tbl.rsm$subscale == 'spiritual violence') -->
+<!-- god <- subset(items.tbl.rsm$xsi, items.tbl.rsm\$subscale == 'harmful God-image') x \<- list("Controlling leadership"=control, "Maintain system"=maintain, "Internal distress"=distress, "Spiritual violence"=violence, "Harmful God-image"=god, "Screening items"=screen, "All items"=all) -->
+
+<!-- stripchart(x, main="", xlab="Severity of Spiritual Abuse", \# ylab="Item set", method="jitter", jitter = 0.25, col=c("navy","pink","blue","green","orange","red","grey"), pch=18, xlim = c(-.5,2), cex.lab = .7, cex.axis = .7, las = 2 ) \# abline(v=0) -->
 
 ### Reliability
 
@@ -271,13 +257,12 @@ The RSM expresses internal consistency reliability as Rasch person separation. B
 
 The SHAS also has a high Rasch item separation reliability with Rel = .XX, χ2 (XX) = XXXX.X, p \< .XX, implying that the items have a good spread in terms of item ordering and hierarchy.
 
-``{r}
-#| label: RSM-Item-Reliability
-#| echo: false
-#| warning: false
-#| message: false
-source("Code/IRT-RSM-Item-Separation-Reliability.R")
-``
+<!-- {r}  -->
+<!-- #| label: RSM-Item-Reliability  -->
+<!-- #| echo: false #| warning: false  -->
+<!-- #| message: false  -->
+
+<!-- source("Code/IRT-RSM-Item-Separation-Reliability.R") -->
 
 ### Item-Person Map
 
@@ -285,38 +270,33 @@ source("Code/IRT-RSM-Item-Separation-Reliability.R")
 
 @fig-RSM-WrightMap shows good overlap between the person trait and item severity as evidenced by the match between the mean of the person severity (M = − 0.58) and the mean of the item severity (M = 0.00). This suggests that the majority of the items were appropriate for the sample. While person severity measures range from X.XX logits to − X.XX logits (M = − 0.XX, SD = 0.XX, N = XXXX), the item severities range from X.XX logits to − X.XX logits (M = X.XX, SD = 0.XX, N = XXXX). The item representing the most severe spiritual abuse for participants is Item X, "I feel ... XXX" with the severity at X.XX logits (also reported in Appendix Table 2). By contrast the item representing the least severe spiritual abuse is item XX, "I would ...", with − 1.08 logits.
 
-``{r}
-#| label: fig-RSM-WrightMap
-#| fig-cap: "Item-Person Map"
-#| echo: false
-#| warning: false
-#| message: false
+<!-- {r} -->
+<!-- #| label: fig-RSM-WrightMap  -->
+<!-- #| fig-cap: "Item-Person Map"  -->
+<!-- #| echo: false  -->
+<!-- #| warning: false -->
+<!-- #| message: false -->
 
-source("code/IRT-Estimate-RSM.R")
-suppressPackageStartupMessages(library(WrightMap))
-# tthresh.poly <- tam.threshold(mod_rsm)
-IRT.WrightMap(mod_rsm, dim.names = "", dim.color = 'red', item.side = itemModern, label.items.rows = 1, label.items.srt = 90, thr.sym.cex=0.4, show.thr.lab=FALSE, label.items.cex = 0.4, min.logit.pad = 0.25, max.logit.pad = 0.25, item.prop = .8, vertLines = TRUE, main="") 
+<!-- source("code/IRT-Estimate-RSM.R") suppressPackageStartupMessages(library(WrightMap)) \# tthresh.poly \<- tam.threshold(mod_rsm) IRT.WrightMap(mod_rsm, dim.names = "", dim.color = 'red', item.side = itemModern, label.items.rows = 1, label.items.srt = 90, thr.sym.cex=0.4, show.thr.lab=FALSE, label.items.cex = 0.4, min.logit.pad = 0.25, max.logit.pad = 0.25, item.prop = .8, vertLines = TRUE, main="") -->
 
-# IRT.WrightMap(mod_rsm, show.thr.lab=FALSE)
-# wrightMap(mod_rsm, tthresh.poly)
-``
+<!-- # IRT.WrightMap(mod_rsm, show.thr.lab=FALSE) -->
+
+<!-- # wrightMap(mod_rsm, tthresh.poly) -->
 
 ### Model-Data Fit
 
 To assess the overall fit of the RSM to the SHAS item response data, we use two statistics. The first is the Root Mean Square Error of Approximation (RMSEA). The suggested cutoff for RMSEA is .06. The second is the CFI. The suggested cutoff for the CFI is .95. These fit statistics are presented in Table RSM Model Fit.
 
-``{r}
-#| label: RSM-model-fit
-#| tbl-cap: "RSM Model Fit"
-#| echo: false
-#| warning: false
-#| message: false
+<!-- {r}  -->
+<!-- #| label: RSM-model-fit  -->
+<!-- #| tbl-cap: "RSM Model Fit"  -->
+<!-- #| echo: false  -->
+<!-- #| warning: false  -->
+<!-- #| message: false -->
 
-# tam.fit(mod_rsm)
+<!-- # tam.fit(mod_rsm) -->
 
-source("code/IRT-Estimate-RSM.R")
-logLik(mod_rsm)
-``
+<!-- source("code/IRT-Estimate-RSM.R") logLik(mod_rsm) -->
 
 The obtained RMSEA value of .09 (95% CI\[.092, .093\]) exceeds the cutoff of .06. The CFI of .953 meets the recommended .95 threshold. Together these statistics evidence that the RSM fits the SHAS items.
 
@@ -324,18 +304,16 @@ The obtained RMSEA value of .09 (95% CI\[.092, .093\]) exceeds the cutoff of .06
 
 Differential item functioning (DIF) examines how an item functions differently for people of equal standing on the trait. In this case, we conducted DIF analysis of the SHAS items to examine item bias by gender, and age, and race. \[We applied logistic ordinal regression with IRT scoring. \[We used the Chi-squared likelihood-ratio statistic as the initial DIF detection criteria (alpha \< 0.01) and a cut-off of McFadden pseudo R2Δ ≥ 0.02 in model comparisons to determine substantial DIF, a reasonable threshold used in the development of self-reported health outcomes.\]
 
-``{r}
-#| label: fig-gender-DIF
-#| fig-cap: "Gender DIF"
-#| echo: false
-#| warning: false
-#| message: false
-#| verbose: false
-#| eval: false
+<!-- {r} -->
+<!-- #| label: fig-gender-DIF -->
+<!-- #| fig-cap: "Gender DIF"  -->
+<!-- #| echo: false  -->
+<!-- #| warning: false  -->
+<!-- #| message: false  -->
+<!-- #| verbose: false  -->
+<!-- #| eval: false -->
 
-source("code/IRT-DIF-Run-Gender-DIF.R")
-plot(Gender.DIF, labels = c("Cis Male","Cis Female"))
-``
+<!-- source("code/IRT-DIF-Run-Gender-DIF.R") plot(Gender.DIF, labels = c("Cis Male","Cis Female")) -->
 
 In this analysis, we examined the degree to which there was evidence of uniform differential item functioning (DIF) between two subgroups of participants (group 1 and group 2). As a first step we examined item severity estimates and standard errors specific to each subgroup using the Rating Scale Model @Andrich1978. We estimated item severity for the two subgroups using a combined analysis of both subgroups and then estimating the group-specific item severities and standard errors are shown in Table X.
 
